# ptool-templates

./: .gitignore  .gitmodules  .project.yaml.template  README.md  __init__.py  _ptool.yaml  run.py
_ptool/: util.py
_shared/: App.java  LICENSE  README.md  SampleController.java  exec.cmd  launch.json  universal_script.cmd
_shared/elm/: elm-package.json  package.json
_shared/elm/src/: index.html  index.js  main.css
_shared/haskell/: project.cabal  stack.yaml
_shared/haskell-stack/: project.cabal
_shared/haskell-stack/app/: Main.hs
_shared/haskell-stack/test/: Spec.hs
_shared/java-simple/: .gitignore  App.java  Example.java
c++11/: CMakeLists.txt  README.md  project.yaml
c++11/app/: CMakeLists.txt  main.cpp
c++11/lib/: CMakeLists.txt  Example.cpp
c++11/lib/public/projectlib/: Example.h
c++11/lib/public/scratchlib/: Example.h
c++11/script/: run-cmake.cmd
c++11/test/: CMakeLists.txt  ExampleTest.cpp  main.cpp
c++14/: CMakeLists.txt  README.md  _ptool.yaml
c++14/app/: main.cpp
c++14/cmake/: threads.cmake
c++14/lib/: Example.cpp
c++14/lib/public/projectlib/: Example.h
c++14/script/: build.cmd  run-cmake.cmd  test.cmd
c++14/test/: CMakeLists.txt  ExampleTest.cpp
cpp-cmake/: .gitignore  CMakeLists.txt  Example.h  README.md  _ptool.py  _ptool.yaml  app_CMakeLists.txt  app_main.cpp  lib_CMakeLists.txt  threads.cmake
cpp-cmake/app/: CMakeLists.txt  main.cpp
cpp-cmake/cmake/: sanitizers.cmake
cpp-cmake/lib/: CMakeLists.txt  Example.cpp
cpp-cmake/lib/public/projectlib/: Example.h
cpp-cmake/script/: build.cmd  setup.cmd  test.cmd
cpp-cmake/test/: CMakeLists.txt  ExampleTest.cpp  main.cpp
cs-simple/: .gitignore  Main.cs  README.md  _ptool.yaml  project.csproj
csharp/: .gitignore  Main.cs  README.md  _ptool.yaml  project.csproj
deprecated-java-simple-maven/: _ptool.py  _ptool.yaml  pom.xml
deprecated-java-spring-boot-maven/: README.md  _ptool.yaml
deprecated-java-war-maven/: Widget.java
deprecated-java-web-app-maven/: README.md  _ptool.yaml  pom.xml
elm/: App.elm  README.md  _ptool.yaml  elm-package.json  package.json
elm-haskell/: .env.template  API.hs  App.elm  App.hs  Codegen.elm  CommandLine.hs  Decode.elm  Main.hs  Model.elm  Msg.elm  README.md  Types.elm  Types.hs  Util.elm  Util.hs  VersionInfo.hs  _ptool.py  _ptool.yaml  app_App.hs  app_CommandLine.hs  app_Main.hs  app_Types.hs  app_Util.hs  backend  codegen_CommandLine.hs  codegen_Main.hs  elm-package.json  frontend  index.js  lib_API.hs  lib_Types.hs  lib_VersionInfo.hs  main.css  stack.yaml  view_Util.elm
elm-haskell/script/: backend  codegen
elm-simple/: README.md  _ptool.yaml  elm-package.json
elm-simple/src/: App.elm
elm/src/: App.elm
elm/tests/: Tests.elm  elm-package.json
haskell-stack/: README.md  Setup.hs  _ptool.py  _ptool.yaml  project.cabal
haskell-stack/app/: Main.hs
haskell-stack/lib/: Project.hs
haskell-stack/test/: ProjectSpec.hs  Spec.hs
java-gradle/: _ptool.yaml  build.gradle
java-maven/: .gitignore  App.java  AppTest.java  Example.java  ExampleTest.java  README.md  _ptool.yaml  pom.xml
java-maven/src/main/java/com/company/app/: App.java  Example.java
java-maven/src/test/java/com/company/app/: AppTest.java  (+1 more)
java-simple/: .gitignore  App.java  AppTest.java  ExampleTest.java  README.md  _ptool.yaml  launch.json  pom.xml
java-simple-gradle/: README.md  _ptool.py  _ptool.yaml  build.gradle
java-spring-boot/: .gitignore  App.java  README.md  SampleController.java  SampleControllerTest.java  _ptool.yaml  exec.cmd  pom.xml
java-spring-boot-gradle/: .gitignore  README.md  _ptool.py  _ptool.yaml  build.gradle
java-spring-mvc-aws/: .gitignore  MvcConfig.java  README.md  _ptool.yaml  buildspec.yml  settings.gradle
java-spring-mvc-gradle/: AppInitializer.java  ApplicationConfig.java  Controller.java  _ptool.py  _ptool.yaml  application.properties  build.gradle  buildspec.yml  index.jsp
java-war/: _ptool.yaml  index.jsp  pom.xml  web.xml
java-war-gradle/: README.md  WidgetTest.java  _ptool.yaml  build.gradle  index.jsp  web.xml
java-web-app-gradle/: .gitignore  _ptool.py  _ptool.yaml  build.gradle  index.jsp
lib/: Example.cpp
lib/public/scratchlib/: Example.h
ptoollib/: __init__.py  context.py  util.py
python-game/: .gitignore  README.md  __init__.py  __main__.py  _ptool.py  _ptool.yaml  images__init__.py  setup.py
python-pygame/: .gitignore  README.md  _ptool.yaml  bootstrap.cmd  project.cmd  project.py
python-pypi/: .gitignore  README.md  _ptool.yaml  setup.py
python-pypi/mypackage/: __init__.py  __main__.py  util.py
python-pypi/mypackage/tests/: __init__.py
python-tool/: .gitignore  README.md  __main__.py  _ptool.py  _ptool.yaml  config.py  env.cmd  project.yaml  setup.py  tests__init__.py  virtualenv.cmd
python-tool/script/: bootstrap.cmd  project.cmd  project.py
ruby-gem/: .hgignore  .hgportrc  Gemfile  README.md  Rakefile  _ptool.yaml  bin.rb  cli.rb  cli_test.rb  gem-template.gemspec  project.gemspec  project.rb
ruby-gem/lib/: gem-template.rb
ruby-gem/lib/gem-template/: cli.rb  gem_info.rb
ruby-gem/lib/project.rb/: cli.rb  gem_info.rb
ruby-gem/test/: cli_test.rb  test_helper.rb
ruby-gli/: Gemfile  README.md  Rakefile  _ptool.py  _ptool.yaml  bin.rb  foo.rb  foo_test.rb  gem_info.rb  project.gemspec  project.rb  test_helper.rb  to_do_list.rb
scala-sbt/: README.md  _ptool.py  _ptool.yaml  build.sbt
scala-sbt/src/main/scala/: Project.scala  project.scala
scala-simple/: _ptool.yaml  build.sbt
scala-simple/src/main/scala/: project.scala
script/: bootstrap.cmd  create-project.cmd  create-project.py  project  project.cmd  project.py  requirements.txt  run-cmake
script/projectlib/: __init__.py  arg_util.py  commands.py  file_info.py  git_util.py  lang_util.py  project_yaml.py  template_util.py  util.py
shared/: LICENSE
stack-simple/: README.md  Setup.hs  _ptool.yaml  project.cabal  project.yaml  stack.yaml
stack-simple/app/: Main.hs
stack-simple/lib/: Project.hs
stack-simple/src/: Main.hs
stack-simple/test/: ProjectSpec.hs  Spec.hs
test/: ExampleTest.cpp
(+3 files in other folders)
