name:                                       $project_name
version:                                    0.1.0.0
homepage:                                   https://github.com/$git_user_name/$project_name#readme
license:                                    MIT
license-file:                               LICENSE
author:                                     $author
maintainer:                                 $author_email
copyright:                                  $copyright_year $author
category:                                   Command Line
build-type:                                 Simple
cabal-version:                              >= 1.10
extra-source-files:                         README.md

executable $project_name
  hs-source-dirs:                           src
  main-is:                                  Main.hs
  default-language:                         Haskell2010
  build-depends:                            base >= 4.7 && < 5
