name:                                       $project_name
version:                                    0.1.0.0
homepage:                                   https://github.com/$git_user_name/$project_name#readme
license:                                    MIT
license-file:                               LICENSE
author:                                     $author
maintainer:                                 $author_email
copyright:                                  $copyright_year $author
category:                                   Command Line
build-type:                                 Simple
cabal-version:                              >= 1.10
extra-source-files:                         README.md

source-repository head
  type:                                     git
  location:                                 https://github.com/$git_user_name/$project_name

library
  default-language:                         Haskell2010
  hs-source-dirs:                           lib
  exposed-modules:                          $hs_module_name
  build-depends:                            base >= 4.7 && < 5

executable $project_name-app
  default-language:                         Haskell2010
  hs-source-dirs:                           app
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N
  build-depends:                            base >= 4.7 && < 5
                                          , $project_name

test-suite $project_name-test
  default-language:                         Haskell2010
  type:                                     exitcode-stdio-1.0
  hs-source-dirs:                           test
  main-is:                                  Spec.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N
  build-depends:                            base >= 4.7 && < 5
                                          , $project_name
